Fixed spacing issue in the about title

--- a/styles.css
+++ b/styles.css
@@ -188,9 +188,14 @@ p {
 }
 .work-title,
 .about-title {
-  margin: 0px 0px 0px 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
   font-size: 27px;
   scroll-margin-top: 75px;
+}
+.about-title{
+  margin-top: 100px;
 }
 .work-section,
 .about-section {
